@@ -1,5 +1,6 @@
 8.1.3
 - Fix: Obtain streaming profiles as soon as connected to backend
+- Fix: On system sleep, properly close demuxers before disconnecting from backend
 
 8.1.2
 - More IPv6 fixes
